implemented upload of image files

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,4 +1,6 @@
 <?xml version='1.0' encoding='utf-8'?>
 <resources>
-    <string name="templatePath">/sdcard/Download/</string>
+    <string name="templatePath">/sdcard/Download/fprints/</string>
+    <string name="serverUrl">http://127.0.0.1:8080/</string>
+    <string name="serverUrlFilepath">files</string>
 </resources>
