--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="serverUrl">http://somewhere.com/</string>
     <string name="serverUrlFilepath">api/Person/Enroll</string>
     <string name="serverKey">test</string>
+    <string name="projectName">projectName</string>
 </resources>
